--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,1 @@
-@import "../node_modules/bootstrap/scss/bootstrap";
-@import "../node_modules/@simplyhealth/design/src/scss/config/breakpoints.scss";
-@import "../node_modules/@simplyhealth/design/src/scss/tools/media-queries.scss";
-@import "../node_modules/@simplyhealth/design/src/scss/config/fonts.scss";
-@import "../node_modules/@simplyhealth/design/src/scss/generic/typography.scss";
+@import "./components/calculator.scss";
