--- a/sass/components/calculator.scss
+++ b/sass/components/calculator.scss
@@ -5,41 +5,35 @@
     font-size: 5rem;
     text-align: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    border-radius: 10px
-}
-input { 
-    width: 462px;
-    height: 88px;
-    margin: 30px 10px;
-    border-radius: 5px;
-    font-size: 5rem;
-    text-align: right;
-    border: none;
-}
-#display {
-    background-color: #fff;
-    border-radius: 20px;
-    border: 25px solid black;
-    height: 100px;
-    text-align: right;
-    padding-right: 10px;
-}
-.numbers{
-    margin: auto;
-    width: 500px;
-}
-button {
-    width: 95px;
-    height: 95px;
-    background-color: #fff;
-    margin: 7px;
-    border-radius: 5%;
-    font-size: 40px;
-    border: transparent;
-}
-.operator {
-    background-color: orange; 
-}
-.clear-btn {
-    background-color: grey;
+    border-radius: 10px;
+
+    &__display {
+        background-color: #fff;
+        border-radius: 20px;
+        border: 25px solid black;
+        height: 100px;
+        text-align: right;
+        padding-right: 10px;
+    }
+    &__numbers {
+        margin: auto;
+        width: 500px;
+
+    }
+    &__btn {
+        width: 95px;
+        height: 95px;
+        background-color: #fff;
+        margin: 7px;
+        border-radius: 5%;
+        font-size: 40px;
+        border: transparent;
+
+        &--clear {
+            background-color: grey;
+        }
+        &--operator {
+            background-color: orange; 
+        }
+    }
 }
