applying ITCSS and google fonts

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,7 @@
+// settings
+@import 'https://fonts.googleapis.com/css?family=Raleway&display=swap';
+@import "./config/fonts.scss";
+
+@import "./base/base.scss";
+
 @import "./components/calculator.scss";
