--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+@import 'https://fonts.googleapis.com/css?family=Raleway&display=swap';
+.calculator {
+  font-family: "Raleway-Regular"; }
+
 .calculator {
   background-color: #000;
   width: 540px;
