--- a/sass/base/base.scss
+++ b/sass/base/base.scss
@@ -1,3 +1,11 @@
 .calculator {
     font-family: $font-normal;
 }
+%buttonStyles {
+    width: 95px;
+    height: 95px;
+    margin: 7px;
+    border-radius: 5%;
+    font-size: 40px;
+    border: transparent;
+}
